b=562574 fixes for cairo_copy_clip_rectangle_list and empty cairo_clip_extents r=jrmuizel

--HG--
extra : rebase_source : 7559cb07311c0328d62a625c631a6ab822934b0d